tests/paczka2/big_fuzzy/87876142.err
Error in line 15: tgtkZzx S651 56,8
Error in line 16: tgtkZzx S785 5,0
Error in line 47: tgtkZzx S651 -6,8
Error in line 56: S727 S785 -4,6
Error in line 53: D2z0ZZ S651 23,5
Error in line 44: tgtkZzx S651 86,3
Error in line 68: HqD S65_ 247,7
Error in line 54: S727 S785 55,9
Error in line 82: SE9dM3xUQxA S727 8,2
Error in line 65: HqD S651 57,2
Error in line 81: xbH S651 80,8
Error in line 87: S727 S727 1,6
Error in line 72: tgtkZzx S873 11,2
Error in line 93: D2z0ZZ S873 305,3
Error in line 110: PvKGSm S727 96,6
Error in line 131: S727 S785 73,5
Error in line 137: S727 S727 41,1
Error in line 138: S727 S873 3,5
Error in line 140: HqD S873 64,95
Error in line 125: HqD S651 75,3
Error in line 144: tgtkZzx S785 5,4
Error in line 143: PvKGSm S651 44,8
Error in line 146: tgtkZzx S873 52,6
Error in line 161: xbH S651 24,3
Error in line 162: S727 S785 9,8
Error in line 191: S727 S727 39,7
Error in line 197: tgtkZzx S727 5,8
Error in line 200: D2z0ZZ S873 32,7
Error in line 225: HqD S873 1,8
Error in line 212: xbH S785 38,3
